[b][color=orange]v5.01[/color], 01.06.2022[/b][list]
[*]Fix a LUA Error from SplashScreen >.<[/list]