@@ -12,11 +12,14 @@ local DISABLED_FONT_COLOR = DISABLED_FONT_COLOR
 
 local ChangeLogData = {
 	"Changes:",
-		"• Fix a LUA Error from SplashScreen >.<",
+		"• Fix a db whoopsi in Notification and my General Options",
+		"• Added an skin for EventToastManager",
+		"• Prevent an error on the Widget onEnter/onLeave",
 
 	" ",
 	"Notes:",
 		"• IMPORTANT: THE SKINS SOMETIMES FAILS TO LOAD. I DONT KNOW WHY YET.",
+		" ",
 		"• As always, if you want my latest layout, do the install again",
 		"• If you are getting any errors or something is not working, make sure you are now using:",
 		"  '/muidebug on' and test again",
