@@ -1,3 +1,5 @@
 ### Changes ###
 
-  * Fix a LUA Error from SplashScreen >.<
+  * Fix a db whoopsi in Notification and my General Options
+  * Added an skin for EventToastManager
+  * Prevent an error on the Widget onEnter/onLeave
